Merged PR 1994: feat: Adding filtering on zones for discount levels